Add manage validator page
