# apps/sps-validator-ui/src/app/services/openapi/index.ts
@@ -16,7 +16,9 @@ export type { PriceAtPoint } from './models/PriceAtPoint';
 export { Status } from './models/Status';
 export type { TokenTransferTransaction } from './models/TokenTransferTransaction';
 export type { TokenTransferTransactions } from './models/TokenTransferTransactions';
+export type { Transaction } from './models/Transaction';
 export type { Validator } from './models/Validator';
+export type { ValidatorConfig } from './models/ValidatorConfig';
 export type { Validators } from './models/Validators';
 export type { ValidatorVote } from './models/ValidatorVote';
 export type { ValidatorVotes } from './models/ValidatorVotes';
